syntax = "proto3";

package ij.qsync;

// option java_api_version = 2;
option java_outer_classname = "LanguageClassProto";
option java_package = "com.google.idea.blaze.qsync.project";

enum LanguageClass {
  UNSPECIFIED = 0;
  JAVA = 1;
  KOTLIN = 2;
  CC = 3;
}

